@@ -1,4 +1,5 @@
 pcp-3.11.5 (26 September 2016)
+    - pmdalibvirt: statistics from guest and hypervisor machines
     - dmcache: improved err handling when lvmcache not configured
     - pmie: support expressions involving string-valued-metrics
     - pmlogger: fix several logic errors in disconnect handling
